tests/ui/trait-bounds/argument-with-unnecessary-method-call.stderr
error[E0283]: type annotations needed
  --> $DIR/argument-with-unnecessary-method-call.rs:8:13
   |
LL |     qux(Bar.into());
   |     ---     ^^^^
   |     |
   |     required by a bound introduced by this call
   |
   = note: cannot satisfy `_: From<Bar>`
note: required by a bound in `qux`
  --> $DIR/argument-with-unnecessary-method-call.rs:6:16
   |
LL | fn qux(_: impl From<Bar>) {}
   |                ^^^^^^^^^ required by this bound in `qux`
help: try using a fully qualified path to specify the expected types
   |
LL -     qux(Bar.into());
LL +     qux(<Bar as Into<T>>::into(Bar));
   |
help: consider removing this method call, as the receiver has type `Bar` and `Bar: From<Bar>` trivially holds
   |
LL -     qux(Bar.into());
LL +     qux(Bar);
   |

error[E0277]: the trait bound `&Option<()>: Default` is not satisfied
  --> $DIR/argument-with-unnecessary-method-call.rs:16:25
   |
LL |     tx_heights.get(&()).unwrap_or_default();
   |                         ^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `&Option<()>`
   |
help: the trait `Default` is implemented for `Option<T>`
  --> $SRC_DIR/core/src/option.rs:LL:COL
note: required by a bound in `Option::<T>::unwrap_or_default`
  --> $SRC_DIR/core/src/option.rs:LL:COL

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0283.
For more information about an error, try `rustc --explain E0277`.
